--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http//MrTesau.github.io/travel-azeroth-client",
+  "homepage": "http://MrTesau.github.io/travel-azeroth-client",
   "name": "client",
   "version": "0.1.0",
   "private": true,
